# event-outbox-example

./: .env  .gitignore  README.md  pyproject.toml
example/domain/: booking.py  rapid_testing.py  reporting.py
example/infrastructure/: database.py  http_server.py  message_queue.py
settings/: default.toml  test.toml
tests/: test_domain.py  test_system.py
tests/domain/: test_booking.py  test_rapid_testing.py  test_reporting.py
